Fix video overflowing player area

--- a/thrimbletrimmer/styles/thrimbletrimmer.css
+++ b/thrimbletrimmer/styles/thrimbletrimmer.css
@@ -82,7 +82,6 @@ a,
 #video {
 	width: 100%;
 	max-height: 50vh;
-	overflow: hidden;
 }
 
 /* START BLOCK
@@ -120,7 +119,7 @@ a,
  * so the size of the video is reduced by the progress bar height here.
  */
 #video .vjs-tech {
-	height: calc(50vh - 33px);
+	height: calc(100% - 33px);
 }
 
 #clip-bar {
